--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 
 <body>
-    <div class="header">
+    <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-        <div>
             <ul>
                 <li>
                     <a href="#search-engine-optimization">Search Engine Optimization</a>
@@ -18,8 +17,7 @@
                     <a href="#social-media-marketing">Social Media Marketing</a>
                 </li>
             </ul>
-        </div>
-    </div>
+    </header>
 
         <div class="hero">
         <div class="content">
@@ -53,24 +51,20 @@
     <div class="benefit-brand">
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt="A lightbulb wearing a suit radiating energy." />
-            <p>
-                Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
-            </p>
-        </div>
-        <div class="benefit-cost">
+            <p>Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.</p>
+    </div>
+
+    <div class="benefit-cost">
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt="Coins with dollar signs and a cog behind them." />
-            <p>
-                As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.
-            </p>
-        </div>
+            <p>As the search ranking for your business increases, your advertising costs decrease, and you no longer need to advertise your page.</p>
     </div>
-    <div class="footer">
+   
+    <footer>
         <h2>Made with ❤️️ by Horiseon</h2>
-        <p>
-            &copy; 2019 Horiseon Social Solution Services, Inc.
-        </p>
-    </div>
+        <p>&copy; 2019 Horiseon Social Solution Services, Inc.</p>
+    </footer>
+
 </body>
 
 </html>
