--- a/index.html
+++ b/index.html
@@ -2,21 +2,20 @@
 <html lang="en-us">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="UTF-8">
     <link rel="stylesheet" href="./assets/css/style.css">
-    <title>website</title>
+    <title>Horiseon SSS Inc</title>
 </head>
 
 <body>
+
     <header>
         <h1>Hori<span class="seo">seo</span>n</h1>
-            <ul>
-                <li>
-                    <a href="#search-engine-optimization">Search Engine Optimization</a>
-                    <a href="#online-reputation-management">Online Reputation Management</a>
-                    <a href="#social-media-marketing">Social Media Marketing</a>
-                </li>
-            </ul>
+
+         <a href="#search-engine-optimization">Search Engine Optimization</a>
+         <a href="#online-reputation-management">Online Reputation Management</a>
+         <a href="#social-media-marketing">Social Media Marketing</a>
+
     </header>
 
         <div class="hero">
